fixed some user journies

--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,5 @@ AUTH0_CLIENT_ID=UWS1hOdN37vALBqb9ssB49lWXqFOXCjj
 AUTH0_CLIENT_SECRET=vRCmDPtp9uW34LZfh-_zeaG2k2jGVzwwP_LrVhvDTWb_eiQCvuSlpDGCdUsMFcAc
 AUTH0_CALLBACK_URL=http://localhost:5001/callback
 BYPASS_AUTH=true
+
+LOG_LEVEL=INFO,DEBUG  # ERROR, WARN, INFO, DEBUG
