--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "myclinic-server",
   "version": "1.0.0",
@@ -8,21 +7,24 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "seed": "node seed.js",
+    "seed:roles": "node seedRoles.js",
+    "create:super-admin": "node createSuperAdmin.js",
     "setup": "npm install"
   },
   "dependencies": {
+    "auth0": "^4.2.0",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "express-oauth2-jwt-bearer": "^1.6.0",
-    "jwks-rsa": "^3.1.0",
     "express-jwt": "^7.7.7",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "auth0": "^4.2.0",
-    "moment": "2.30.1"
+    "jwks-rsa": "^3.1.0",
+    "moment": "2.30.1",
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
