develop ui and backend features

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.462.0",
     "mongoose": "^8.2.1",
