--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/react-date-range": "^1.4.10",
     "auth0": "^4.22.0",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.9.0",
     "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.1",
