--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "auth0": "^4.2.0",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
