--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "moment": "2.30.1",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "firebase-admin": "13.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
