--- a/server/.env
+++ b/server/.env
@@ -9,5 +9,6 @@ AUTH0_CLIENT_ID=UWS1hOdN37vALBqb9ssB49lWXqFOXCjj
 AUTH0_CLIENT_SECRET=vRCmDPtp9uW34LZfh-_zeaG2k2jGVzwwP_LrVhvDTWb_eiQCvuSlpDGCdUsMFcAc
 AUTH0_CALLBACK_URL=http://localhost:5001/callback
 BYPASS_AUTH=true
+FCM_TOKEN=c1UVLZwBQbuHU5AOBonNiO:APA91bElCJb1GClCvC9NfqTsIZmuJnMOQzzhc6Y3zj8mfh_T-xspl74KUpiC8BzSiFlQUSB-EWT5o2EofNsBsRVbbbpggxxSJMbv4GGWAUdkml5GW4uT46o
 
 LOG_LEVEL=INFO,DEBUG  # ERROR, WARN, INFO, DEBUG
