made minor changes

--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ VITE_API_URL=http://localhost:5001/api
 VITE_AUTH0_DOMAIN=dev-4vgfwjaogpv4yvzc.us.auth0.com
 VITE_AUTH0_CLIENT_ID=UWS1hOdN37vALBqb9ssB49lWXqFOXCjj
 VITE_AUTH0_AUDIENCE=https://dev-4vgfwjaogpv4yvzc.us.auth0.com/api/v2/
+
+
 DIALOG_SMS_USERNAME=ehands
 DIALOG_SMS_PASSWORD=ANVehands!8425
 DIALOG_SMS_API_URL=https://e-sms.dialog.lk/api/v2
-DIALOG_SMS_SOURCE_ADDRESS=eHands
+DIALOG_SMS_SOURCE_ADDRESS=Amila K
