--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.4",
     "recharts": "^2.12.7",
+    "socket.io": "^4.8.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
