--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "express": "^4.18.3",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
