--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "jwks-rsa": "^3.1.0",
     "moment": "2.30.1",
     "mongoose": "^8.2.1",
-    "firebase-admin": "13.5.0"
+    "firebase-admin": "13.5.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
